--- a/package.json
+++ b/package.json
@@ -3,16 +3,22 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/common": "^8.0.0",
-    "@angular/compiler": "^8.0.0",
-    "@angular/core": "^8.0.0",
-    "@angular/forms": "^8.0.0",
-    "@angular/platform-browser": "^8.0.0",
-    "@angular/platform-browser-dynamic": "^8.0.0",
-    "@angular/router": "^8.0.0",
-    "core-js": "2",
-    "rxjs": "^6.5.2",
-    "zone.js": "^0.9.1"
+    "@angular/animations": "^9.0.6",
+    "@angular/common": "^9.0.6",
+    "@angular/compiler": "^9.0.6",
+    "@angular/core": "^9.0.6",
+    "@angular/fire": "^5.4.2",
+    "@angular/forms": "^9.0.6",
+    "@angular/platform-browser": "^9.0.6",
+    "@angular/platform-browser-dynamic": "^9.0.6",
+    "@angular/router": "^9.0.6",
+    "@types/jquery": "^3.3.33",
+    "core-js": "^3.6.4",
+    "firebase": ">= 5.5.7 <8",
+    "firestore": "^1.1.6",
+    "rxjs": "^6.5.4",
+    "tslib": "^1.11.1",
+    "zone.js": "^0.10.2"
   },
   "scripts": {
     "ng": "ng",
